add equalsIgnoreCase in StringUtils